# adventofcode-2023

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.devcontainer/: devcontainer.json
cmake/: Warnings.cmake
src/: day1.cpp  day1.h
